抽取共通的navigation

--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="4cG-U9-CgD">
             <objects>
                 <navigationController id="7uf-rx-DVs" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="lFZ-nm-emb">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="lFZ-nm-emb" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
