--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="0pC-cB-TyJ">
             <objects>
                 <navigationController id="5Jp-2N-8tS" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="dHP-JC-TdX">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="dHP-JC-TdX" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1963,7 +1963,7 @@
         <scene sceneID="Gmg-xC-7zY">
             <objects>
                 <navigationController id="BQf-QR-Nbl" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="55o-3l-3ar">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="55o-3l-3ar" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
