--- a/Aier360/Controllers/校园/亲子任务/Homework.storyboard
+++ b/Aier360/Controllers/校园/亲子任务/Homework.storyboard
@@ -1200,7 +1200,7 @@
         <scene sceneID="dDe-lP-HMO">
             <objects>
                 <navigationController id="FnR-Zx-hPg" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="KyO-tA-0T3">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="KyO-tA-0T3" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1221,7 +1221,7 @@
         <scene sceneID="3Zu-Hq-8ES">
             <objects>
                 <navigationController id="w3p-NW-qsy" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="KiW-1p-vIo">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="KiW-1p-vIo" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
