--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -1333,7 +1333,7 @@
         <scene sceneID="nJC-zd-aiP">
             <objects>
                 <navigationController id="1ln-23-hk7" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="BD8-go-7Xf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="BD8-go-7Xf" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1354,7 +1354,7 @@
         <scene sceneID="4hN-UK-xQO">
             <objects>
                 <navigationController id="ct0-BR-hQc" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="67b-zx-HBc">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="67b-zx-HBc" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
