--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -2525,7 +2525,7 @@
         <scene sceneID="DO0-zM-mR4">
             <objects>
                 <navigationController id="adx-kH-0PT" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Z9g-gk-PRh">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Z9g-gk-PRh" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2546,7 +2546,7 @@
         <scene sceneID="qCp-Vo-uTg">
             <objects>
                 <navigationController id="U2A-4C-VFP" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="5Yg-nU-FZQ">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="5Yg-nU-FZQ" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2567,7 +2567,7 @@
         <scene sceneID="2w7-Jc-iCV">
             <objects>
                 <navigationController id="UV5-kh-bA9" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="QTJ-Yk-9aC">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="QTJ-Yk-9aC" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
