--- a/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
+++ b/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="q0h-2U-AR2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="q0h-2U-AR2">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -442,7 +442,7 @@
         <scene sceneID="kDv-YI-0nE">
             <objects>
                 <navigationController id="8Uj-l9-k8f" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="vA2-pl-Fz4">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="vA2-pl-Fz4" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -463,7 +463,7 @@
         <scene sceneID="imJ-Rj-U3Q">
             <objects>
                 <navigationController id="KMY-jY-XHE" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="fxx-ry-YCM">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="fxx-ry-YCM" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
