--- a/Aier360/Base.lproj/Main.storyboard
+++ b/Aier360/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <scene sceneID="tlp-TH-j2w">
             <objects>
                 <navigationController id="NKz-9b-cRa" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="c58-gq-vkM">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="c58-gq-vkM" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
