--- a/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
+++ b/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="smG-zW-95Z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="smG-zW-95Z">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -1145,7 +1145,7 @@
         <scene sceneID="oxH-PT-AA4">
             <objects>
                 <navigationController id="mYe-LS-SHp" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="1Mx-qi-rVs">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="1Mx-qi-rVs" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1166,7 +1166,7 @@
         <scene sceneID="swI-aQ-FBJ">
             <objects>
                 <navigationController id="x6p-1c-rLE" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="282-8g-EVw">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="282-8g-EVw" customClass="ZXNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
