--- a/Aier360/Controllers/联系人/Contacts.storyboard
+++ b/Aier360/Controllers/联系人/Contacts.storyboard
@@ -105,6 +105,7 @@
                     <navigationItem key="navigationItem" id="gQ8-eg-eqB"/>
                     <connections>
                         <outlet property="tableView" destination="XyM-80-1mL" id="nLQ-vd-B0N"/>
+                        <segue destination="ftB-IR-iRk" kind="show" identifier="好友" id="80J-ZS-PBa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6a-mq-ldS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -120,10 +121,10 @@
                         <viewControllerLayoutGuide type="bottom" id="OGO-q7-4nE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gfG-bl-50p">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RLF-hD-Ocn" customClass="TopBarView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLF-hD-Ocn" customClass="TopBarView">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -134,7 +135,7 @@
                                     <outlet property="delegate" destination="ftB-IR-iRk" id="SUf-dd-QYm"/>
                                 </connections>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SFX-qm-Chh">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SFX-qm-Chh">
                                 <rect key="frame" x="0.0" y="45" width="600" height="491"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -159,7 +160,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7a5-NM-JgF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1097" y="401"/>
+            <point key="canvasLocation" x="1182" y="381"/>
         </scene>
         <!--Contacts Content View Controller-->
         <scene sceneID="0fY-Ai-1fk">
@@ -287,11 +288,11 @@
                         <viewControllerLayoutGuide type="bottom" id="WqZ-sh-chg"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="p6y-oR-9Cq">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4ah-HE-GR4">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <searchBar key="tableHeaderView" contentMode="redraw" id="WXQ-ed-rPE">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
