--- a/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
+++ b/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
@@ -21,8 +21,17 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9Ok-XH-yH9">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="输入教工姓名" id="6ey-Qv-99U">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="q0h-2U-AR2" id="uXd-Jt-Elv"/>
+                                    </connections>
+                                </searchBar>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="KGE-ok-wrK" detailTextLabel="ltk-xz-mob" style="IBUITableViewCellStyleValue1" id="llU-Z9-SAd">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="KGE-ok-wrK" detailTextLabel="ltk-xz-mob" style="IBUITableViewCellStyleValue1" id="llU-Z9-SAd">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="llU-Z9-SAd" id="7Ca-7o-seJ">
@@ -31,13 +40,13 @@
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KGE-ok-wrK">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ltk-xz-mob">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.70196078431372544" green="0.69019607843137254" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -63,11 +72,21 @@
                     </view>
                     <navigationItem key="navigationItem" id="0h4-cH-bLF"/>
                     <connections>
+                        <outlet property="searchDisplayController" destination="dHt-vr-S6G" id="tRN-Gu-BSK"/>
                         <outlet property="tableView" destination="9Ok-XH-yH9" id="iw5-Do-2sn"/>
                         <segue destination="hE9-kn-lLF" kind="show" identifier="check" id="6bR-vm-W6x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HwP-dT-Kau" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="dHt-vr-S6G">
+                    <connections>
+                        <outlet property="delegate" destination="q0h-2U-AR2" id="8Br-ML-0HZ"/>
+                        <outlet property="searchBar" destination="6ey-Qv-99U" id="Xnt-OK-mFl"/>
+                        <outlet property="searchContentsController" destination="q0h-2U-AR2" id="GKZ-Vg-yFJ"/>
+                        <outlet property="searchResultsDataSource" destination="q0h-2U-AR2" id="Zj9-zN-IJl"/>
+                        <outlet property="searchResultsDelegate" destination="q0h-2U-AR2" id="7Md-xJ-Kt6"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="328" y="654"/>
         </scene>
