--- a/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
+++ b/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
@@ -77,6 +77,56 @@
                                             <segue destination="tKk-Cx-mbi" kind="show" identifier="positionTeacher" id="kB3-t1-xNh"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXMenuCell" id="fhK-bm-yOM" customClass="ZXMenuCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fhK-bm-yOM" id="ghy-EA-AZb">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xmf-T9-GcW">
+                                                    <rect key="frame" x="15" y="15" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="TsD-D0-ey4"/>
+                                                        <constraint firstAttribute="width" constant="20" id="tLY-LA-9Qf"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxP-vs-uS4">
+                                                    <rect key="frame" x="50" y="15" width="260" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="lX3-8Q-lEW"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w9d-lH-QPq">
+                                                    <rect key="frame" x="325" y="15" width="260" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="5bY-ej-HBn"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="Xmf-T9-GcW" firstAttribute="leading" secondItem="ghy-EA-AZb" secondAttribute="leading" constant="15" id="1hJ-ak-13M"/>
+                                                <constraint firstItem="w9d-lH-QPq" firstAttribute="top" secondItem="ghy-EA-AZb" secondAttribute="top" constant="15" id="Bk3-fh-vPH"/>
+                                                <constraint firstAttribute="trailing" secondItem="w9d-lH-QPq" secondAttribute="trailing" constant="15" id="C6W-6s-OoB"/>
+                                                <constraint firstItem="mxP-vs-uS4" firstAttribute="leading" secondItem="Xmf-T9-GcW" secondAttribute="trailing" constant="15" id="HoO-uj-k56"/>
+                                                <constraint firstItem="w9d-lH-QPq" firstAttribute="width" secondItem="mxP-vs-uS4" secondAttribute="width" id="Jg8-2L-PMl"/>
+                                                <constraint firstItem="mxP-vs-uS4" firstAttribute="top" secondItem="ghy-EA-AZb" secondAttribute="topMargin" constant="7" id="UX4-MC-g1h"/>
+                                                <constraint firstItem="Xmf-T9-GcW" firstAttribute="top" secondItem="ghy-EA-AZb" secondAttribute="top" constant="15" id="nJH-iA-6RK"/>
+                                                <constraint firstItem="w9d-lH-QPq" firstAttribute="leading" secondItem="mxP-vs-uS4" secondAttribute="trailing" constant="15" id="o0W-oG-KTp"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="hasNewLabel" destination="w9d-lH-QPq" id="deG-R6-muE"/>
+                                            <outlet property="logoImage" destination="Xmf-T9-GcW" id="V8x-uK-vXq"/>
+                                            <outlet property="titleLabel" destination="mxP-vs-uS4" id="dxL-Uw-WoZ"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="q0h-2U-AR2" id="iyl-Yh-Ql7"/>
@@ -255,7 +305,7 @@
         <!--Teacher Info View Controller-->
         <scene sceneID="PW7-hL-Le3">
             <objects>
-                <viewController id="B8w-jg-3vr" customClass="ZXTeacherInfoViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZXTeacherInfoViewController" id="B8w-jg-3vr" customClass="ZXTeacherInfoViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="crJ-UC-rRM"/>
                         <viewControllerLayoutGuide type="bottom" id="ElR-Gr-nRI"/>
