--- a/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
+++ b/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
@@ -365,6 +365,7 @@
                     <connections>
                         <outlet property="tableView" destination="Ruk-Vg-XUD" id="tt2-VN-K6a"/>
                         <segue destination="ohg-y9-IVH" kind="show" identifier="add" id="YEB-fT-lvJ"/>
+                        <segue destination="FFW-Fg-JbG" kind="show" identifier="pick" id="Eqe-Qt-ruX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tcU-h2-TRb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1062,6 +1063,94 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RJE-BH-CAi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-332" y="1654"/>
+        </scene>
+        <!--Class Multi Picker View Controller-->
+        <scene sceneID="yUF-1B-ymx">
+            <objects>
+                <viewController storyboardIdentifier="ZXClassMultiPickerViewController" id="FFW-Fg-JbG" customClass="ZXClassMultiPickerViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="baV-Fh-CxV"/>
+                        <viewControllerLayoutGuide type="bottom" id="evK-Iq-iZY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cdL-mf-dbD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="paN-0D-i5K">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="5Dx-jR-BwA">
+                                    <rect key="frame" x="0.0" y="312" width="600" height="100"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="手机端不支持创建班级，请登录网页管理平台创建" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXM-X8-CJ0">
+                                            <rect key="frame" x="8" y="25" width="584" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="Pf0-p2-wHh"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="gXM-X8-CJ0" firstAttribute="leading" secondItem="5Dx-jR-BwA" secondAttribute="leading" constant="8" id="Scf-pR-OGu"/>
+                                        <constraint firstItem="gXM-X8-CJ0" firstAttribute="top" secondItem="5Dx-jR-BwA" secondAttribute="top" constant="25" id="bkL-yQ-mII"/>
+                                        <constraint firstAttribute="trailing" secondItem="gXM-X8-CJ0" secondAttribute="trailing" constant="8" id="v5H-oo-9sP"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXClassPickCell" id="STX-TA-Qq3" customClass="ZXClassPickCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="STX-TA-Qq3" id="8gA-ug-WC1">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8E6-to-30T">
+                                                    <rect key="frame" x="15" y="15" width="570" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="kwn-8I-dGw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="8E6-to-30T" secondAttribute="trailing" constant="15" id="GFJ-aF-8FY"/>
+                                                <constraint firstItem="8E6-to-30T" firstAttribute="leading" secondItem="8gA-ug-WC1" secondAttribute="leading" constant="15" id="LfR-b9-3s3"/>
+                                                <constraint firstItem="8E6-to-30T" firstAttribute="top" secondItem="8gA-ug-WC1" secondAttribute="topMargin" constant="7" id="eZv-AZ-VHe"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="8E6-to-30T" id="EUv-jV-siW"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="FFW-Fg-JbG" id="jDS-15-5cW"/>
+                                    <outlet property="delegate" destination="FFW-Fg-JbG" id="P8V-ou-Bcl"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="paN-0D-i5K" secondAttribute="trailing" id="LnA-Bu-jBo"/>
+                            <constraint firstItem="paN-0D-i5K" firstAttribute="top" secondItem="baV-Fh-CxV" secondAttribute="bottom" id="dZ7-yk-g39"/>
+                            <constraint firstItem="evK-Iq-iZY" firstAttribute="top" secondItem="paN-0D-i5K" secondAttribute="bottom" id="dnu-eF-NvL"/>
+                            <constraint firstItem="paN-0D-i5K" firstAttribute="leading" secondItem="cdL-mf-dbD" secondAttribute="leading" id="fk6-cw-Zub"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="cH1-Mm-3tE"/>
+                    <connections>
+                        <outlet property="tableView" destination="paN-0D-i5K" id="yZ3-8N-Mde"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j79-0K-VGg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2332" y="339"/>
         </scene>
     </scenes>
     <resources>
